first big changes

--- a/res/layout/frg_show_runs.xml
+++ b/res/layout/frg_show_runs.xml
@@ -11,12 +11,20 @@
             android:layout_height="fill_parent"
             >
 
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+
         <ExpandableListView
                 android:id="@+id/listExpRunning"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:groupIndicator="@drawable/group_indicator"
                 />
+
+
+
+        <TextView android:id="@+id/noRunsText" android:textColor="@color/white_back" android:layout_centerInParent="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="No saved runs yet!" android:textSize="20dp" android:drawableBottom="@drawable/empty_100"/>
+
+        </RelativeLayout>
 
 
         <!--<ListView-->
