--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -32,4 +32,19 @@
         <item name="android:layout_width">match_parent</item>
     </style>
 
+
+
+    <style name="spinner_style">
+        <item name="android:background">@drawable/plus_minus_selector</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+    </style>
+
+
+
+
 </resources>
