--- a/res/layout/custom_spinner_header.xml
+++ b/res/layout/custom_spinner_header.xml
@@ -6,7 +6,7 @@
         >
 
 
-    <TextView android:textStyle="bold"  android:textSize="@dimen/xmedium_text" android:layout_centerHorizontal="true"  android:id="@+id/planDescriptionSpinner2" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
+    <TextView android:textStyle="bold"  android:textSize="@dimen/medium_text" android:layout_centerHorizontal="true"  android:id="@+id/planDescriptionSpinner2" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <ImageView android:id="@+id/planArrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentRight="true"  android:src="@drawable/arrow_down"/>
 
 
