--- a/res/layout/group_header.xml
+++ b/res/layout/group_header.xml
@@ -8,18 +8,19 @@
               android:paddingLeft="8dp"
               tools:context=".MainActivity" >
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="49dp"
-            android:gravity="center_vertical">
+    <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="49dp"-->
+            <!--android:gravity="center_vertical">-->
 
         <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="49dp"
                 android:textColor="@color/white_back"
+               android:gravity="center_vertical"
                 android:textSize="14sp"
                 android:textStyle="bold" />
     </LinearLayout>
 
-</LinearLayout>
+<!--</LinearLayout>-->
