--- a/res/layout/custom_plans_spinner_item.xml
+++ b/res/layout/custom_plans_spinner_item.xml
@@ -2,7 +2,7 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="44dp" android:background="@drawable/grey_no_gradient_interval"  android:padding="4dp" android:minHeight="44dp"
+                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="8dp" android:minHeight="44dp"
         >
 
     <ImageView android:id="@+id/planIconSpinner"
@@ -13,7 +13,7 @@
 
     <TextView android:textStyle="bold" android:layout_toRightOf="@+id/planIconSpinner" android:layout_centerVertical="true" android:id="@+id/planDescriptionSpinner" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Select" android:layout_marginRight="4dp"/>
+    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" android:textColor="@color/white_back" android:layout_marginRight="4dp"/>
 
 
 </RelativeLayout>
