--- a/res/layout/new_plan_alert_dialog.xml
+++ b/res/layout/new_plan_alert_dialog.xml
@@ -6,12 +6,12 @@
         android:background="@color/white_back"
         android:padding="10dp">
 
-    <TextView android:layout_marginTop="10dp" android:drawablePadding="8dp" android:textStyle="bold"  android:textColor="@color/interval_red" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dialogError" android:text="Description must be between 1 and 20 characters" android:textSize="12dp" android:singleLine="true" android:visibility="invisible"/>
+    <TextView android:drawablePadding="8dp" android:textStyle="italic"  android:textColor="@color/interval_red" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dialogError" android:text="Description must be between 1 and 20 characters" android:textSize="12dp" android:singleLine="true" android:visibility="invisible"/>
 
     <TextView android:layout_marginTop="4dp" android:drawablePadding="8dp" android:textStyle="bold" android:drawableLeft="@drawable/checkbox" android:textColor="@color/interval_green" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dialogMeters" android:layout_below="@+id/dialogError" android:textSize="16dp"/>
     <TextView android:layout_marginTop="10dp"  android:drawablePadding="8dp" android:textStyle="bold" android:drawableLeft="@drawable/checkbox" android:textColor="@color/interval_green" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dialogSeconds" android:layout_below="@+id/dialogMeters" android:textSize="16dp"/>
     <TextView android:layout_marginTop="10dp"  android:drawablePadding="8dp" android:textStyle="bold" android:drawableLeft="@drawable/checkbox" android:textColor="@color/interval_green" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dialogRounds" android:layout_below="@+id/dialogSeconds" android:textSize="16dp"/>
-    <EditText android:layout_marginTop="10dp" android:singleLine="true"  android:drawablePadding="8dp" android:textStyle="bold" android:textColor="@color/interval_green" android:hint="Plan description (max 20 chars)" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dialogDesc" android:layout_below="@+id/dialogRounds" android:textSize="16dp"/>
+    <EditText android:layout_marginTop="20dp" android:layout_marginBottom="60dp" android:background="@color/white_back" android:singleLine="true"  android:drawablePadding="8dp" android:textColorHint="@color/circle_grey" android:textColor="@color/interval_green" android:hint="Plan description (max 20 chars)" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dialogDesc" android:layout_below="@+id/dialogRounds" android:textSize="16dp"/>
 
 
 </RelativeLayout>
