--- a/res/layout/list_interval_row.xml
+++ b/res/layout/list_interval_row.xml
@@ -13,7 +13,7 @@
     <TextView android:textStyle="bold" android:layout_toRightOf="@+id/opponentIcon" android:id="@+id/distanceIntervalText" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <TextView android:textStyle="italic" android:layout_toRightOf="@+id/opponentIcon" android:layout_below="@+id/distanceIntervalText" android:id="@+id/timeIntervalText" android:textColor="@color/white_back" android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-    <TextView android:textStyle="italic|bold" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:id="@+id/fastestIntervalText" android:textColor="@color/interval_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="fastest" android:layout_marginRight="4dp"/>
+    <TextView android:textStyle="italic|bold" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:id="@+id/fastestIntervalText" android:textColor="@color/interval_green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fastest" android:layout_marginRight="4dp"/>
 
 
 </RelativeLayout>
