--- a/res/layout/frg_interval.xml
+++ b/res/layout/frg_interval.xml
@@ -218,6 +218,17 @@
                       android:id="@+id/roundsText"
                     />
 
+            <!--<TextView android:layout_width="wrap_content"-->
+                      <!--android:layout_height="wrap_content"-->
+                      <!--android:layout_gravity="center_horizontal|center_vertical"-->
+                      <!--android:layout_marginTop="128dp"-->
+                      <!--android:textSize="@dimen/large_text"-->
+                      <!--android:textColor="@color/interval_green"-->
+                      <!--android:textStyle="bold|italic"-->
+                      <!--android:id="@+id/speedText"-->
+                      <!--android:text="Speed: 0.0"-->
+                    <!--/>-->
+
 
             <ImageButton
                     android:layout_margin="15dp"
