--- a/res/layout/zero_height_spinner_item.xml
+++ b/res/layout/zero_height_spinner_item.xml
@@ -5,6 +5,9 @@
               android:layout_height="0dp"
         android:visibility="gone">
 
+    <TextView   android:id="@+id/planDescriptionSpinner" android:layout_width="wrap_content" android:layout_height="0dp" />
+
+
 
 
 </LinearLayout>
