switching to fusedlocation api adding text to speech

--- a/res/layout/frg_show_runs.xml
+++ b/res/layout/frg_show_runs.xml
@@ -74,6 +74,8 @@
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
+
+
             >
     <fragment
             android:id="@+id/mapListKostas"
@@ -92,6 +94,9 @@
                     android:focusable="false"
                     android:id="@+id/buttonCloseMap"
                     android:layout_gravity="left|bottom" />
+
+            <ProgressBar android:id="@+id/progressBarMap" android:layout_width="wrap_content" android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"/>
 
 
         </FrameLayout>
