--- a/res/layout/frg_interval.xml
+++ b/res/layout/frg_interval.xml
@@ -82,6 +82,7 @@
                         android:layout_below="@+id/intervalRoundsPicker"
                         android:drawSelectorOnTop="true"
                         android:layout_marginBottom="6dp"
+                        android:visibility="invisible"
                         style="@style/spinner_style"
 
 
@@ -107,6 +108,7 @@
                         android:layout_width="0dp"
                         android:layout_height="54dp"
                         android:drawableStart="@drawable/arrow_right_v2"
+                        android:drawableLeft="@drawable/arrow_right_v2"
                         android:paddingLeft="20dp"
                         android:text="@string/start"
                         android:textStyle="bold"
@@ -141,6 +143,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:textColor="@color/white_back"
+                        android:visibility="invisible"
                         android:maxLines="1"
                         android:singleLine="true"/>
 
@@ -153,6 +156,7 @@
 
         <!--</LinearLayout>-->
 
+
             <fragment
                     android:id="@+id/mapFrgKostas"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -164,14 +168,16 @@
 
         </LinearLayout>
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                 >
 
             <ListView android:id="@+id/completedIntervals"
+                      android:layout_alignParentTop="true"
+                      android:layout_above="@+id/timerProgressWheel"
                       android:layout_width="fill_parent"
-                      android:layout_height="164dp"
+                      android:layout_height="wrap_content"
                       android:visibility="invisible"/>
 
             <com.kostas.onlineHelp.ProgressWheel
@@ -180,10 +186,10 @@
                     android:layout_height="@dimen/progressBarSize"
                     android:visibility="invisible"
                     app:textSize="@dimen/large_text"
-                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_centerInParent="true"
 
                     app:textColor="@color/interval_green"
-                    app:rimColor="@color/interval_green"
+                    app:rimColor="@color/white_back"
                     app:barColor="@color/interval_red"
                     app:contourColor="@color/circle_grey"
                     app:barWidth="16dp"
@@ -196,8 +202,7 @@
                     android:layout_height="@dimen/progressBarSize"
                     android:visibility="invisible"
                     app:textSize="@dimen/xmedium_text"
-                    android:layout_gravity="center_horizontal|center_vertical"
-
+                    android:layout_centerInParent="true"
 
                     app:textColor="@color/interval_green"
                     app:rimColor="@color/white_back"
@@ -207,27 +212,7 @@
                     app:rimWidth="20dp"
                     />
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:visibility="invisible"
-                      android:layout_gravity="center_horizontal|center_vertical"
-                      android:layout_marginTop="100dp"
-                      android:textSize="@dimen/large_text"
-                      android:textColor="@color/interval_red"
-                      android:textStyle="bold|italic"
-                      android:id="@+id/roundsText"
-                    />
 
-            <!--<TextView android:layout_width="wrap_content"-->
-                      <!--android:layout_height="wrap_content"-->
-                      <!--android:layout_gravity="center_horizontal|center_vertical"-->
-                      <!--android:layout_marginTop="128dp"-->
-                      <!--android:textSize="@dimen/large_text"-->
-                      <!--android:textColor="@color/interval_green"-->
-                      <!--android:textStyle="bold|italic"-->
-                      <!--android:id="@+id/speedText"-->
-                      <!--android:text="Speed: 0.0"-->
-                    <!--/>-->
 
 
             <ImageButton
@@ -237,26 +222,89 @@
                     android:src="@drawable/replay"
                     android:background="@drawable/circle_green"
                     android:id="@+id/buttonStart"
-                    android:layout_gravity="center_horizontal|center_vertical" />
+                    android:layout_centerInParent="true"/>
+
+
+            <RelativeLayout android:layout_marginRight="8dp" android:layout_marginLeft="8dp" android:background="@drawable/info_back" android:padding="10dp" android:id="@+id/textsInfoRun" android:layout_below="@+id/buttonStart" android:layout_width="fill_parent" android:layout_height="wrap_content">
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_alignParentLeft="true"
+                          android:layout_alignParentTop="true"
+                          android:textSize="@dimen/medium_text"
+                          android:textColor="@color/white_back"
+                          android:textStyle="bold|italic"
+                          android:id="@+id/roundsText"
+                          android:text="Rounds: N/A"
+                        />
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_alignParentLeft="true"
+                          android:layout_below="@+id/roundsText"
+                          android:textSize="@dimen/medium_text"
+                          android:textColor="@color/white_back"
+                          android:textStyle="bold"
+                          android:id="@+id/paceText"
+                          android:text="Pace: 0m 0s / km"
+                        />
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_alignParentRight="true"
+                          android:layout_alignParentTop="true"
+                          android:textSize="@dimen/medium_text"
+                          android:textColor="@color/white_back"
+                          android:textStyle="bold"
+                          android:id="@+id/timeText"
+                          android:text="Time: 00h 00m 00s"
+                        />
+
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_alignParentRight="true"
+                          android:layout_below="@+id/timeText"
+                          android:textSize="@dimen/medium_text"
+                          android:textColor="@color/white_back"
+                          android:textStyle="bold"
+                          android:id="@+id/avgPaceText"
+                          android:text="Pace avg: 0m 0s / km"
+                        />
+
+
+
+
+
+
+
+
+
+            </RelativeLayout>
+
+
 
             <ImageButton
-                    android:layout_margin="15dp"
+
+                    android:layout_below="@+id/textsInfoRun"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
                     android:layout_width="70dp"
                     android:visibility="invisible"
                     android:layout_height="70dp"
                     android:src="@drawable/stop_32"
                     android:background="@drawable/circle_red"
                     android:id="@+id/buttonStop"
-                    android:layout_gravity="center_horizontal|bottom" />
+                   android:layout_centerHorizontal="true" />
 
             <ImageButton
-                    android:layout_margin="15dp"
+                    android:layout_below="@+id/textsInfoRun"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:src="@drawable/return_32"
                     android:background="@drawable/circle_red"
                     android:id="@+id/buttonBack"
-                    android:layout_gravity="center_horizontal|bottom" />
+                    android:layout_centerHorizontal="true" />
 
             <com.google.android.gms.ads.AdView
 
@@ -267,12 +315,12 @@
                     app:adUnitId="ca-app-pub-1164456313108704/6586430278"
                     android:layout_gravity="center_horizontal|bottom"
                     android:visibility="invisible"
-                    android:layout_marginBottom="90dp"
+                    android:layout_above="@+id/layoutBottomButtons"
 
                     />
 
 
-            <LinearLayout android:orientation="horizontal" android:visibility="invisible" android:id="@+id/layoutBottomButtons" android:layout_gravity="center_horizontal|bottom" android:layout_width="fill_parent" android:layout_height="84dp" android:background="@color/circle_grey" android:paddingTop=".5dp">
+            <LinearLayout android:baselineAligned="false" android:layout_alignParentBottom="true"  android:orientation="horizontal" android:visibility="gone" android:id="@+id/layoutBottomButtons" android:layout_gravity="center_horizontal|bottom" android:layout_width="fill_parent" android:layout_height="84dp" android:background="@color/circle_grey" android:paddingTop=".5dp">
 
 
 
@@ -288,16 +336,7 @@
             </LinearLayout>
 
 
-            <!--<RelativeLayout android:id="@+id/layoutBottomButtons" android:visibility="invisible" android:layout_gravity="center_horizontal|bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24dp">-->
-
-
-                <!--<ImageButton android:layout_alignParentLeft="true" android:layout_marginLeft="48dp"   android:id="@+id/buttonDismissInterval"  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:background="@drawable/dismiss_selector"/>-->
-                <!--<ImageButton android:layout_alignParentRight="true" android:layout_marginRight="48dp"  android:id="@+id/buttonSaveRunWithIntervals"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/save_selector"/>-->
-
-
-            <!--</RelativeLayout>-->
-
-        </FrameLayout>
+        </RelativeLayout>
 
     </ViewFlipper>
 
