--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -4,21 +4,22 @@
         <item>New interval</item>
         <item>My Diary</item>
         <item>My Plans</item>
+        <item>Settings</item>
         <item>Exit</item>
     </string-array>
 
 
-    <integer-array name="drawer_titles_colors">
-        <item>@color/death_grey</item>
-        <item>@android:color/white</item>
-        <item>@color/death_grey</item>
-        <item>@android:color/white</item>
-        <item>@android:color/white</item>
-        <item>@android:color/white</item>
-        <item>@android:color/white</item>
-        <item>@android:color/white</item>
-        <item>@android:color/white</item>
-    </integer-array>
+    <!--<integer-array name="drawer_titles_colors">-->
+        <!--<item>@color/death_grey</item>-->
+        <!--<item>@android:color/white</item>-->
+        <!--<item>@color/death_grey</item>-->
+        <!--<item>@android:color/white</item>-->
+        <!--<item>@android:color/white</item>-->
+        <!--<item>@android:color/white</item>-->
+        <!--<item>@android:color/white</item>-->
+        <!--<item>@android:color/white</item>-->
+        <!--<item>@android:color/white</item>-->
+    <!--</integer-array>-->
 
 
 </resources>
