--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="drawer_highlight">#212121</color>
     <color name="map_icon_border">#006778</color>
     <color name="semitrans_white">#50ffffff</color>
+    <color name="semitrans_green">#90e6</color>
     <color name="semitrans_vodafone_red">#55e60000</color>
     <color name="progresswheel_rim">#e9e9e9</color>
     <color name="drawer_counter">#bf0101</color>
@@ -27,5 +28,6 @@
     <color name="interval_green">#27ae60</color>
     <color name="interval_green_pressed">#2ecc71</color>
     <color name="interval_red">#e74c3c</color>
+    <color name="cyan">#00ffff</color>
 
 </resources>
